--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -1159,5 +1159,10 @@
             <meta-data android:name="androidx.emoji2.text.EmojiCompatInitializer"
                 tools:node="remove" />
         </provider>
+
+        <!-- FPS Info -->
+        <service android:name=".FPSInfoService"
+                android:exported="false" />
+
     </application>
 </manifest>
